@@ -2,6 +2,10 @@
 Version 1.6.7
 *******************************************************************************
 
+2008-06-30 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
+	* Added an m4 macro to deal with finding libupnp in the users'
+	configure script.
+
 2008-04-28 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
 	* Fix in function SetSeed() in threadutil/src/ThreadPool.c for CYGWIN
 	compilation. Thanks to Gary Chan.
